# hack_yeah2020

./: .dockerignore  .gitignore  README.md  docker-compose.override.yml.example  docker-compose.yml
backend/: conftest.py  pyproject.toml  setup.cfg
backend/apps/: application.py  commands.py  extensions.py
backend/apps/auth/: __init__.py  hooks.py  schemas.py  urls.py  views.py
backend/apps/common/: blueprints.py  consumers.py  exceptions.py  factories.py  models.py  views.py
backend/apps/common/extensions/: socketio.py
backend/apps/common/wrappers/: response.py
backend/apps/help_requests/: __init__.py  admin.py  factories.py  geocoding.py  models.py  schemas.py  urls.py  views.py
backend/apps/migrations/: alembic.ini
backend/apps/migrations/versions/: 0746038abe3e__add_latitude_and_longitude_fields_to_helprequest___20200404_2059.py  4529a58bc502__add_foreign_key_from_HelpRequest_to_User__20200404_1220.py  54bc13321f2c__adjust_help_request_helprequest_fields__20200404_1804.py  5f9184a66bc7__cast_phone_number_to_string__20200404_1945.py  953bd4188164__add_recording_url_field_to_helprequest__20200405_0605.py  b2974f676072__add_users_user_model__20190924_1750.py  f7e7f84b01ce__add_help_requests_help_request_model__20200404_1205.py
backend/apps/task_app/: celery.py  extensions.py  tasks.py
backend/apps/users/: __init__.py  admin.py  consumers.py  factories.py  models.py  routing.py  schemas.py  urls.py  views.py
backend/config/: celery_worker.py
backend/config/settings/: base.py  local.py  test.py
backend/tests/apps/auth/: test_views.py
(+31 files in other folders)
